lazy_link/tests/ui/static_member.stderr
error: only functions can be lazily imported
 --> tests/ui/static_member.rs:5:5
  |
5 |     static MY_VAR: &'static ();
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
